5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4172/executions/1630_2925.log
== TEST (2019-04-02 16:21:34) 
-- CODE:
n=int(input("geração atual: "))
y=int(input("nova gração: "))
print((n)**y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:21:55) 
-- CODE:
n=int(input("geração atual: "))
y=int(input("nova gração: "))
print((n)**y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:22:00) 
-- CODE:
n= int(input("geração atual: "))
y= int(input("nova gração: "))
print((n)**y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y= int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:22:44) 
-- CODE:
n = int(input("geração atual: "))

y = int(input("nova gração: "))
 
ex=(n)**y
print(ex)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    y = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:22:58) 
-- CODE:
n = int(input(" geração atual: "))

y = int(input(" nova gração: "))
 
ex=(n)**y
print(ex)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    y = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:23:14) 
-- CODE:
n = int(input(" geracao atual: "))

y = int(input(" nova gracao: "))
 
ex=(n)**y
print(ex)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    y = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:23:25) 
-- CODE:
n = int(input(" geracao atual: "))

y = int(input(" nova gracao: "))
 
ex=(n)**y
print(ex)
-- EXECUTION TIME:
0.243981
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2925/main.py", line 3, in <module>
    y = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:25:42) 
-- CODE:
n = int(input(" geracao atual: "))

y=2 

print((n)**y+n)
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:25:47) 
-- CODE:
n = int(input(" geracao atual: "))

y=2 

print((n)**y+n)
-- EXECUTION TIME:
0.170596
-- TEST CASE 1:
---- input:
9
---- correct output:
512
---- user output:
90
-- TEST CASE 2:
---- input:
13
---- correct output:
8192
---- user output:
182
-- TEST CASE 3:
---- input:
19
---- correct output:
524288
---- user output:
380
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:26:51) 
-- CODE:
n = int(input(" geracao atual: "))


y=2 

print((n)**y)
-- OUTPUT:
81
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:30:32) 
-- CODE:
n = int(input(" geracao atual: "))

u=int(input("nova geração: "))

print((n)**u+n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    u=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:30:40) 
-- CODE:
n = int(input(" geracao atual: "))

u=int(input("nova gerao: "))

print((n)**u+n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    u=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:30:47) 
-- CODE:
n = int(input(" geracao atual: "))

u=int(input("nova gerao: "))

print((n)**u+n)
-- EXECUTION TIME:
0.219866
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2925/main.py", line 3, in <module>
    u=int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:33:41) 
-- CODE:
n = int(input(" geracao atual: "))



print(n**2)



-- EXECUTION TIME:
0.135152
-- TEST CASE 1:
---- input:
9
---- correct output:
512
---- user output:
81
-- TEST CASE 2:
---- input:
13
---- correct output:
8192
---- user output:
169
-- TEST CASE 3:
---- input:
19
---- correct output:
524288
---- user output:
361
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:33:42) 
-- CODE:
n = int(input(" geracao atual: "))



print(n**2)



-- OUTPUT:
81
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:34:27) 
-- CODE:
n = int(input(" geracao atual: "))

y=(n)**2

print(n+y)



-- EXECUTION TIME:
0.138002
-- TEST CASE 1:
---- input:
9
---- correct output:
512
---- user output:
90
-- TEST CASE 2:
---- input:
13
---- correct output:
8192
---- user output:
182
-- TEST CASE 3:
---- input:
19
---- correct output:
524288
---- user output:
380
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:34:27) 
-- CODE:
n = int(input(" geracao atual: "))

y=(n)**2

print(n+y)



-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:38:20) 
-- CODE:
n = int(input(" geracao atual: "))

y= 4

print((n**y))





-- EXECUTION TIME:
0.1932
-- TEST CASE 1:
---- input:
9
---- correct output:
512
---- user output:
6561
-- TEST CASE 2:
---- input:
13
---- correct output:
8192
---- user output:
28561
-- TEST CASE 3:
---- input:
19
---- correct output:
524288
---- user output:
130321
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:41:01) 
-- CODE:
n = int(input(" geracao atual: "))
y=int(input(" nova geracao: "))

print((n**y)+n)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:41:04) 
-- CODE:
n = int(input(" geracao atual: "))
y=int(input(" nova geracao: "))

print((n**y)+n)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:41:12) 
-- CODE:
n = int(input(" geracao atual: "))
y=int(input(" nova geracao: "))

print((n**y)+n)




-- EXECUTION TIME:
0.141825
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2925/main.py", line 2, in <module>
    y=int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:45:33) 
-- CODE:
n = int(input(" geracao atual: "))
n1=1
n2=2
n3=4
n4=8


print(n1+n2+n3+n4+(n)**2)




-- OUTPUT:
96
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:46:05) 
-- CODE:
n = int(input(" geracao atual: "))
n1=1
n2=2
n3=4
n4=8


print(n1+n2+n3+n4+(n)**2)




-- EXECUTION TIME:
0.168763
-- TEST CASE 1:
---- input:
9
---- correct output:
512
---- user output:
96
-- TEST CASE 2:
---- input:
13
---- correct output:
8192
---- user output:
184
-- TEST CASE 3:
---- input:
19
---- correct output:
524288
---- user output:
376
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:47:10) 
-- CODE:
n = int(input(" geracao atual: "))
x=
y=
n1=1
n2=2
n3=4
n4=8


print(n1+n2+n3+n4-(n)**5)




-- ERROR:
File "XXXX", line 2
    x=
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:47:17) 
-- CODE:
n = int(input(" geracao atual: "))

n1=1
n2=2
n3=4
n4=8


print(n1+n2+n3+n4-(n)**5)




-- OUTPUT:
-59034
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:47:29) 
-- CODE:
n = int(input(" geracao atual: "))

n1=1
n2=2
n3=4
n4=8


print(n1+n2+n3+n4-((n)**5))




-- OUTPUT:
-59034
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:50:14) 
-- CODE:
n = int(input(" geracao atual: "))

n1=1
n2=2
n3=4
n4=8
p=()


print(n1+n2+n3+n4+16)




-- EXECUTION TIME:
0.124682
-- TEST CASE 1:
---- input:
9
---- correct output:
512
---- user output:
31
-- TEST CASE 2:
---- input:
13
---- correct output:
8192
---- user output:
31
-- TEST CASE 3:
---- input:
19
---- correct output:
524288
---- user output:
31
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:50:14) 
-- CODE:
n = int(input(" geracao atual: "))

n1=1
n2=2
n3=4
n4=8
p=()


print(n1+n2+n3+n4+16)




-- OUTPUT:
31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:53:19) 
-- CODE:
n = int(input(" geracao atual: "))

n1=2**n



print(n1)




-- EXECUTION TIME:
0.208067
-- TEST CASE 1:
---- input:
9
---- correct output:
512
---- user output:
512
-- TEST CASE 2:
---- input:
13
---- correct output:
8192
---- user output:
8192
-- TEST CASE 3:
---- input:
19
---- correct output:
524288
---- user output:
524288
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 14:43:50) 
-- CODE:
n = int(input(" geracao atual: "))

n1=2**n



print(n1)




-- OUTPUT:
512
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
